--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2020-12-03 Thu 18:26 -->
+<!-- 2020-12-04 Fri 10:37 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>TREX I/O library</title>
@@ -261,38 +261,38 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org71a335a">1. Installation</a></li>
-<li><a href="#org80a10c3">2. Conventions</a></li>
-<li><a href="#org77d0939">3. Metadata</a></li>
-<li><a href="#org94bef7e">4. Electrons</a></li>
-<li><a href="#org4975730">5. Nuclei</a></li>
-<li><a href="#orgb06b0ad">6. Effective core potentials</a></li>
-<li><a href="#org9a21a34">7. Basis set</a></li>
-<li><a href="#orgddaa7e8">8. One-electron integrals on the basis set</a></li>
-<li><a href="#org8c94a05">9. Two-electron integrals on the basis set</a></li>
-<li><a href="#orgabeeb9d">10. Molecular orbitals</a></li>
-<li><a href="#org61659ec">11. One-electron integrals in the MO basis</a></li>
-<li><a href="#orgb2b6ae2">12. Two-electron integrals in the MO basis</a></li>
-<li><a href="#orge69d0b2">13. Helper functions</a>
+<li><a href="#orgc0034d6">1. Installation</a></li>
+<li><a href="#orgd14ccdd">2. Conventions</a></li>
+<li><a href="#orgb3e52c7">3. Metadata</a></li>
+<li><a href="#org1006a6f">4. Electrons</a></li>
+<li><a href="#org7e7d0e8">5. Nuclei</a></li>
+<li><a href="#org1393199">6. Effective core potentials</a></li>
+<li><a href="#orgb08fa5e">7. Basis set</a></li>
+<li><a href="#org52ab068">8. One-electron integrals on the basis set</a></li>
+<li><a href="#org90042d8">9. Two-electron integrals on the basis set</a></li>
+<li><a href="#org7d912cf">10. Molecular orbitals</a></li>
+<li><a href="#orgb207861">11. One-electron integrals in the MO basis</a></li>
+<li><a href="#orgf4b78fc">12. Two-electron integrals in the MO basis</a></li>
+<li><a href="#orgbf3b003">13. Helper functions</a>
 <ul>
-<li><a href="#org9e17477">13.1. Periodic table</a>
+<li><a href="#orgc465392">13.1. Periodic table</a>
 <ul>
-<li><a href="#org115f165">13.1.1. <code>trexio_element_name_of_symbol</code></a></li>
-<li><a href="#orgc9fa92c">13.1.2. <code>trexio_element_number_of_symbol</code></a></li>
-<li><a href="#org5613fde">13.1.3. <code>trexio_element_symbol_of_number</code></a></li>
+<li><a href="#orgd2e11a6">13.1.1. <code>trexio_element_name_of_symbol</code></a></li>
+<li><a href="#org6ff5f1f">13.1.2. <code>trexio_element_number_of_symbol</code></a></li>
+<li><a href="#org9f7b349">13.1.3. <code>trexio_element_symbol_of_number</code></a></li>
 </ul>
 </li>
-<li><a href="#orge159f61">13.2. Spherical to cartesian coordinates transformation</a></li>
+<li><a href="#orgf8deca4">13.2. Spherical to cartesian coordinates transformation</a></li>
 </ul>
 </li>
-<li><a href="#org67bfb2a">14. Acknowledgments</a></li>
+<li><a href="#org4b531b9">14. Acknowledgments</a></li>
 </ul>
 </div>
 </div>
 
 
-<div id="outline-container-org71a335a" class="outline-2">
-<h2 id="org71a335a"><span class="section-number-2">1</span> Installation</h2>
+<div id="outline-container-orgc0034d6" class="outline-2">
+<h2 id="orgc0034d6"><span class="section-number-2">1</span> Installation</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 This prototype uses  the EZFIO library generator,  which is provided
@@ -367,8 +367,8 @@ To create the <code>config.trex</code> file from this file, run
 </div>
 
 
-<div id="outline-container-org80a10c3" class="outline-2">
-<h2 id="org80a10c3"><span class="section-number-2">2</span> Conventions</h2>
+<div id="outline-container-orgd14ccdd" class="outline-2">
+<h2 id="orgd14ccdd"><span class="section-number-2">2</span> Conventions</h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li>All data is stored in atomic units.</li>
@@ -383,8 +383,8 @@ in Fortran)</li>
 </div>
 </div>
 
-<div id="outline-container-org77d0939" class="outline-2">
-<h2 id="org77d0939"><span class="section-number-2">3</span> Metadata</h2>
+<div id="outline-container-orgb3e52c7" class="outline-2">
+<h2 id="orgb3e52c7"><span class="section-number-2">3</span> Metadata</h2>
 <div class="outline-text-2" id="text-3">
 <div class="org-src-container">
 <pre class="src src-org">metadata
@@ -434,8 +434,8 @@ in Fortran)</li>
 </div>
 </div>
 
-<div id="outline-container-org94bef7e" class="outline-2">
-<h2 id="org94bef7e"><span class="section-number-2">4</span> Electrons</h2>
+<div id="outline-container-org1006a6f" class="outline-2">
+<h2 id="org1006a6f"><span class="section-number-2">4</span> Electrons</h2>
 <div class="outline-text-2" id="text-4">
 <div class="org-src-container">
 <pre class="src src-org">electron
@@ -467,8 +467,8 @@ in Fortran)</li>
 </div>
 </div>
 
-<div id="outline-container-org4975730" class="outline-2">
-<h2 id="org4975730"><span class="section-number-2">5</span> Nuclei</h2>
+<div id="outline-container-org7e7d0e8" class="outline-2">
+<h2 id="org7e7d0e8"><span class="section-number-2">5</span> Nuclei</h2>
 <div class="outline-text-2" id="text-5">
 <div class="org-src-container">
 <pre class="src src-org">nucleus
@@ -519,8 +519,8 @@ in Fortran)</li>
 </div>
 </div>
 
-<div id="outline-container-orgb06b0ad" class="outline-2">
-<h2 id="orgb06b0ad"><span class="section-number-2">6</span> Effective core potentials</h2>
+<div id="outline-container-org1393199" class="outline-2">
+<h2 id="org1393199"><span class="section-number-2">6</span> Effective core potentials</h2>
 <div class="outline-text-2" id="text-6">
 <div class="org-src-container">
 <pre class="src src-org">ecp
@@ -613,8 +613,8 @@ in Fortran)</li>
 </div>
 </div>
 
-<div id="outline-container-org9a21a34" class="outline-2">
-<h2 id="org9a21a34"><span class="section-number-2">7</span> Basis set</h2>
+<div id="outline-container-orgb08fa5e" class="outline-2">
+<h2 id="orgb08fa5e"><span class="section-number-2">7</span> Basis set</h2>
 <div class="outline-text-2" id="text-7">
 <p>
 By definition, atomic orbitals (AOs) are centered on the nuclei.  To
@@ -711,8 +711,8 @@ With Slater orbitals, the radial part is expressed as
 </div>
 </div>
 
-<div id="outline-container-orgddaa7e8" class="outline-2">
-<h2 id="orgddaa7e8"><span class="section-number-2">8</span> One-electron integrals on the basis set</h2>
+<div id="outline-container-org52ab068" class="outline-2">
+<h2 id="org52ab068"><span class="section-number-2">8</span> One-electron integrals on the basis set</h2>
 <div class="outline-text-2" id="text-8">
 <div class="org-src-container">
 <pre class="src src-org">basis_1e_int
@@ -728,8 +728,8 @@ With Slater orbitals, the radial part is expressed as
 </div>
 </div>
 
-<div id="outline-container-org8c94a05" class="outline-2">
-<h2 id="org8c94a05"><span class="section-number-2">9</span> Two-electron integrals on the basis set</h2>
+<div id="outline-container-org90042d8" class="outline-2">
+<h2 id="org90042d8"><span class="section-number-2">9</span> Two-electron integrals on the basis set</h2>
 <div class="outline-text-2" id="text-9">
 <div class="org-src-container">
 <pre class="src src-org">basis_2e_int
@@ -745,8 +745,8 @@ With Slater orbitals, the radial part is expressed as
 </div>
 </div>
 
-<div id="outline-container-orgabeeb9d" class="outline-2">
-<h2 id="orgabeeb9d"><span class="section-number-2">10</span> Molecular orbitals</h2>
+<div id="outline-container-org7d912cf" class="outline-2">
+<h2 id="org7d912cf"><span class="section-number-2">10</span> Molecular orbitals</h2>
 <div class="outline-text-2" id="text-10">
 <p>
 The MOs are expanded on the <i>normalized</i> atomic basis set:
@@ -770,8 +770,8 @@ The MOs are expanded on the <i>normalized</i> atomic basis set:
 </div>
 </div>
 
-<div id="outline-container-org61659ec" class="outline-2">
-<h2 id="org61659ec"><span class="section-number-2">11</span> One-electron integrals in the MO basis</h2>
+<div id="outline-container-orgb207861" class="outline-2">
+<h2 id="orgb207861"><span class="section-number-2">11</span> One-electron integrals in the MO basis</h2>
 <div class="outline-text-2" id="text-11">
 <div class="org-src-container">
 <pre class="src src-org">mo_1e_int
@@ -786,8 +786,8 @@ The MOs are expanded on the <i>normalized</i> atomic basis set:
 </div>
 </div>
 
-<div id="outline-container-orgb2b6ae2" class="outline-2">
-<h2 id="orgb2b6ae2"><span class="section-number-2">12</span> Two-electron integrals in the MO basis</h2>
+<div id="outline-container-orgf4b78fc" class="outline-2">
+<h2 id="orgf4b78fc"><span class="section-number-2">12</span> Two-electron integrals in the MO basis</h2>
 <div class="outline-text-2" id="text-12">
 <div class="org-src-container">
 <pre class="src src-org">mo_2e_int
@@ -803,16 +803,16 @@ The MOs are expanded on the <i>normalized</i> atomic basis set:
 </div>
 </div>
 
-<div id="outline-container-orge69d0b2" class="outline-2">
-<h2 id="orge69d0b2"><span class="section-number-2">13</span> Helper functions</h2>
+<div id="outline-container-orgbf3b003" class="outline-2">
+<h2 id="orgbf3b003"><span class="section-number-2">13</span> Helper functions</h2>
 <div class="outline-text-2" id="text-13">
 </div>
-<div id="outline-container-org9e17477" class="outline-3">
-<h3 id="org9e17477"><span class="section-number-3">13.1</span> Periodic table</h3>
+<div id="outline-container-orgc465392" class="outline-3">
+<h3 id="orgc465392"><span class="section-number-3">13.1</span> Periodic table</h3>
 <div class="outline-text-3" id="text-13-1">
 </div>
-<div id="outline-container-org115f165" class="outline-4">
-<h4 id="org115f165"><span class="section-number-4">13.1.1</span> <code>trexio_element_name_of_symbol</code></h4>
+<div id="outline-container-orgd2e11a6" class="outline-4">
+<h4 id="orgd2e11a6"><span class="section-number-4">13.1.1</span> <code>trexio_element_name_of_symbol</code></h4>
 <div class="outline-text-4" id="text-13-1-1">
 <p>
 Returns the name of an element from its symbol
@@ -820,8 +820,8 @@ Returns the name of an element from its symbol
 </div>
 </div>
 
-<div id="outline-container-orgc9fa92c" class="outline-4">
-<h4 id="orgc9fa92c"><span class="section-number-4">13.1.2</span> <code>trexio_element_number_of_symbol</code></h4>
+<div id="outline-container-org6ff5f1f" class="outline-4">
+<h4 id="org6ff5f1f"><span class="section-number-4">13.1.2</span> <code>trexio_element_number_of_symbol</code></h4>
 <div class="outline-text-4" id="text-13-1-2">
 <p>
 Returns the atomic number of an element from its symbol
@@ -829,8 +829,8 @@ Returns the atomic number of an element from its symbol
 </div>
 </div>
 
-<div id="outline-container-org5613fde" class="outline-4">
-<h4 id="org5613fde"><span class="section-number-4">13.1.3</span> <code>trexio_element_symbol_of_number</code></h4>
+<div id="outline-container-org9f7b349" class="outline-4">
+<h4 id="org9f7b349"><span class="section-number-4">13.1.3</span> <code>trexio_element_symbol_of_number</code></h4>
 <div class="outline-text-4" id="text-13-1-3">
 <p>
 Returns the symbol of an element from its atomic number
@@ -840,8 +840,8 @@ Returns the symbol of an element from its atomic number
 </div>
 
 
-<div id="outline-container-orge159f61" class="outline-3">
-<h3 id="orge159f61"><span class="section-number-3">13.2</span> Spherical to cartesian coordinates transformation</h3>
+<div id="outline-container-orgf8deca4" class="outline-3">
+<h3 id="orgf8deca4"><span class="section-number-3">13.2</span> Spherical to cartesian coordinates transformation</h3>
 <div class="outline-text-3" id="text-13-2">
 <p>
 The transformation matrix from the  AO basis expressed in spherical
@@ -856,8 +856,8 @@ be retrieved, as well as its pseudo-inverse.
 </div>
 </div>
 </div>
-<div id="outline-container-org67bfb2a" class="outline-2">
-<h2 id="org67bfb2a"><span class="section-number-2">14</span> Acknowledgments</h2>
+<div id="outline-container-org4b531b9" class="outline-2">
+<h2 id="org4b531b9"><span class="section-number-2">14</span> Acknowledgments</h2>
 <div class="outline-text-2" id="text-14">
 <p>
 <img src="https://trex-coe.eu/sites/default/files/inline-images/euflag.jpg" alt="euflag.jpg" />
@@ -872,7 +872,7 @@ that might be made of such content.
 </div>
 </div>
 <div id="postamble" class="status">
-<p class="date">Created: 2020-12-03 Thu 18:26</p>
+<p class="date">Created: 2020-12-04 Fri 10:37</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
